# cs2-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: console.rs  lib.rs  logger.rs  module.rs  pattern.rs  ptr.rs  str.rs
src/interfaces/: engine_client.rs  mod.rs
src/oof/: logger.rs  mod.rs  module.rs  pattern.rs  util.rs
src/sdk/: mod.rs  modules.rs  patterns.rs
src/sdk/convars/: mod.rs
src/sdk/global_context/: interfaces.rs  mod.rs  modules.rs  patterns.rs
src/sdk/interfaces/: engine_client.rs  mem_alloc.rs  mod.rs
src/sdk/math/: angle.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
