[package]
name = "cs2-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
windows = { version = "0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
] }
