[package]
name = "cs2-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# logging
log = { version = "0" }
simplelog = { version = "0", default-features = false, features = [
    "local-offset",
] }

# error handling
anyhow = { version = "1" }
thiserror = { version = "1" }

# vectorized byte-searching for patterns
memchr = { version = "2", default-features = false, features = [
    "std",
] }

# detouring functions
retour = { version = "0" }

# windows api
windows = { version = "0", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
